--- a/student-manager/gestor-de-estudantes.csproj
+++ b/student-manager/gestor-de-estudantes.csproj
@@ -35,7 +35,7 @@
   <ItemGroup>
     <Reference Include="MySql.Data, Version=8.0.33.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\Downloads\mysql-connector-net-8.0.33-noinstall\v4.6.2\MySql.Data.dll</HintPath>
+      <HintPath>mysql-connector-net-8.0.33-noinstall\v4.6.2\MySql.Data.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
